# lirc

./: .gitignore  .gitmodules  .travis.yml  BUILD.debian  CPPLINT.cfg  Makefile  Makefile.am  NEWS  NEWS.in  README.md  configure.ac  control.in  debian.changelog.in  lirc_options.conf  pep8.conf  pre-commit  pylint.conf  ubuntu.changelog  ubuntu.changelog.in
daemons/: Makefile.am  backend-commands.cpp  backend-commands.h  commands.cpp  commands.h  dummy-backend  fd_list.cpp  fd_list.h  lircd-backend-std.cpp  lircd-backend-tcp.cpp  lircd-backend.cpp  lircd-uinput.cpp  lircd.cpp  lircd_commands.cpp  lircd_commands.h  lircd_options.cpp  lircd_options.h  lircmd.cpp  lircrcd.cpp  pidfile.cpp  pidfile.h  run-lircd.sh
debian/: NEWS  README  README.Debian  README.debian  changelog  control  copyright  install  lirc-old2new  lirc.postinst  postinst  postrm  rules  watch
doc/: Makefile.am
fedora/: 0001-Build-Remove-python-tests.patch  0001-lib-Fix-missing-include-config.h.patch  0001-python-pkg-tests-Don-t-hardcode-socat-and-expect-pat.patch  0002-Build-Disable-non-linkable-plugins-on-kfreebsd.patch  0002-build-Let-configure-update-also-lib-lirc-config.h.patch  0002-python-pkg-tests-Don-t-hardcode-socat-and-expect-pat.patch  0003-Build-Disable-non-linkable-plugins-on-kfreebsd.patch  0003-build-Fix-VPATH-builds.patch  0003-build-Fix-VPATHS-builds-294.patch  0003-build-mageia-fixes.patch  0003-lirc.org-Bugfix.patch  0004-doc-Deprecate-lirc.hwdb-NEWS-update.patch  0004-plugins-audio_alsa-Fix-byte-truncating-in-16-bit-dat.patch  0005-contrib-Fix-usb-devices-acl-permissions-rhbz-1364744.patch  0005-doc-Mute-annoying-build-error-message.patch  0006-Build-Use-correct-python-interpreter.patch  0006-include-Update-bundled-lirc.h.patch  0007-Build-linking-issue.patch  0011-lirc.org-Update.patch  README.fedora  (+3 more)
(+98 files in other folders)
